--- a/Plantilla/sakai-ng-master/src/app/login/login/login.component.html
+++ b/Plantilla/sakai-ng-master/src/app/login/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
   <div class="header">
       <div class="icon-wrapper">
-          <img src="path_to_your_home_icon.png" alt="Home Icon">
+          <img src="/src/assets/layout/images/themes/bootstrap4-dark-purple.svg" alt="Home Icon">
       </div>
   </div>
   <div class="outer-card"> <!-- Cuadro exterior más grande y con sombra suave -->
@@ -21,9 +21,7 @@
 
 
   <style>
-body{
-    background-color: #333;
-}
+
     .login-container {
   display: flex;
   flex-direction: column;
@@ -45,8 +43,8 @@ body{
 }
 
 .icon-wrapper {
-  width: 80px;
-  height: 80px;
+  width: 90px;
+  height: 90px;
   background-color: white;
   border-radius: 50%;
   display: flex;
